# FaceTrack

./: .gitignore  CMakeLists.txt  README.md
config/: config_infer_primary_facedetectir.txt  config_tracker_NvDCF_accuracy.yml
gst-plugins/gst-facetracker/: Makefile  gstfacetracker.c  gstfacetracker.h
src/: main.c
